 - [ n ], please see old bug tracker at https://bugs.jython.org.
 - [ GH-n ], please see https://github.com/jython/jython.
 - [ FM-n ], please see https://github.com/jython/frozen-mirror.

==============================================================================
Jython 2.7.4
==============================================================================

New Features

    - In a module Java project, Jython now appears as the automatic module
      org.python.jython (whichever JAR you use) thanks to GH-325.

Jython 2.7.4b2 Bugs fixed

    - [ GH-325 ] Upward compatibility to Java 9 Modularity

Jython 2.7.4b1 Bugs fixed
    - [ GH-316 ] Clash over META-INF in shaded JARs
    - [ GH-310 ] CVE-2024-25710 and CVE-2024-26308 (commons-compress)
    - [ GH-304 ] from java import * not working in Java 21
    - [ GH-302 ] Interactive interpreter awaits input instead of raising syntax error
    - [ GH-298 ] Keep better accounts of contribution and CLA
    - [ GH-288 ] Build fails when using modules (duplicate org.w3c from JARs)
    - [ GH-281 ] Invoking the wrong overloaded Java constructor
    - [ GH-280 ] LineNumberTable deprecated for removal in 2.6 still there
    - [ GH-277 ] Argument coercion fails for Java interface with default methods
    - [ GH-272 ] GlobalRef.createReaperThreadIfAbsent produces IllegalMonitorStateException
    - [ GH-269 ] Upgrade Google Guava to 32.0.1 (CVE-2023-2976)
    - [ GH-264 ] Create a security policy (changes on GitHub only)
    - [ GH-254 ] Regression in socket.socket.sendall for sending Unicode
    - [ GH-247 ] PySystemStateTest fails on Mac
    - [ GH-245 ] Document download/binaries location
    - [ GH-238 ] Using == to compare strings in sys
    - [ GH-223 ] JPasswordField no longer works due to 'bullet' echo char
    - [ GH-221 ] Incorrect method precedence with overloading and variable arity
    - [ GH-204 ] IllegalArgumentException: where char method returns non-byte value

